# agentaskit

./: .aider.conf.yml  .aiderignore  .clippy.toml  .editorconfig  .envrc  .gitignore  .gitmodules  .mise.toml  CONTRIBUTING.md  Cargo.toml  GIT_SETUP.md  IMPLEMENTATION_COMPLETE.md  LLAMA_CPP_UPDATE_SUMMARY.md  Makefile  README.md  REVIEW_FINDINGS.md  SYSTEM_TEST_REPORT.md  TEST_FIXES_SUMMARY.md  TODO_PIXI_LOCK.md  UNIFIED_PRODUCTION_STRUCTURE.md  WORKFLOW_007_SUMMARY.md  WORKFLOW_FIXES_SUMMARY.md  agentask.subject.todo  agentask.todo  pixi.toml  rustfmt.toml  system_integrity.json
.cargo/: config.toml
.github/: Update.prompt.md
.github/instructions/: instructions.instructions.md
.github/workflows/: agentgateway-build.yml  ci.yml  cross-reference.yml  integration-tests.yml  llamacpp-build.yml  nushell-migrate.yml  release.yml  rust.yml  sbom.yml  slo-check.yml  subject-intake.yml  todo-validate.yml  verify.yml  wiki-build.yml
TEST/perf/: test_perf_001.py
TEST/slo/: test_slo_check.py
agentaskit-production/: .todo  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile
agentaskit-production/TEST/: README.md
agentaskit-production/alerts/: README.md  alerting-rules.yaml  backpressure.yaml  performance.yaml  slo.yaml
agentaskit-production/anchors/: README.md
agentaskit-production/artifacts/: README.md
agentaskit-production/configs/: rate_limits.yaml  tracing.yaml
agentaskit-production/core/: Cargo.toml  build.rs
agentaskit-production/dashboards/: README.md  sla.json
agentaskit-production/docs/: EVIDENCE_TRAIL_DOCUMENTATION.md  UNIFICATION_PLAN.md  WORKFLOW_007_OBSERVABILITY_SLO_COMPLETION.md
agentaskit-production/hooks/: pre-push
agentaskit-production/lint/: todo.schema.md
agentaskit-production/services/: Cargo.toml
agentaskit-production/services/src/: health.rs  lib.rs
agentaskit-production/tests/integration/: Cargo.toml
agentaskit-production/tests/integration/enhanced_workflow/: deliverable_manager_tests.rs  end_to_end_tests.rs  health_monitoring_tests.rs  location_manager_tests.rs  methodology_engine_tests.rs  mod.rs  sop_parser_tests.rs
anchors/: README.md  anchor-20251005-080803.json
artifacts/: MANIFEST.sha256  README.md
configs/: rate_limits.yaml  tracing.yaml
core/: Cargo.toml  build.rs  check_errors.txt  check_errors_2.txt
dashboards/: sla.json
docs/: ENHANCED_WORKFLOW_COMPONENTS_REPORT.md  README.md  WORKFLOW_INTEGRATION_COMPLETE.md  WORKSPACE_CROSS_ANALYSIS_REPORT.md  features.md
hooks/: pre-push
integrations/agentgateway/: Cargo.toml  DEPENDENCY_ANALYSIS.md  README.md
integrations/agentgateway/src/: a2a.rs  auth.rs  config.rs  gateway.rs  lib.rs  mcp.rs  observability.rs  ratelimit.rs  routing.rs  xds.rs
integrations/agentgateway/tests/: a2a_tests.rs  auth_tests.rs  config_tests.rs  integration_tests.rs  mcp_tests.rs  test_utils.rs
integrations/wiki-rs/: Cargo.toml  README.md
integrations/wiki-rs/src/: config.rs  generator.rs  lib.rs  llm.rs  output.rs
integrations/wiki-rs/tests/: config_tests.rs  llm_tests.rs  output_tests.rs  test_utils.rs
operational_scripts/: backup.sh  deploy.sh  monitor.sh
sandbox/: README.md
sbom/: README.md  sbom.cdx.json
scripts/: dispatch_run_todo.ps1  run_integration_tests.sh
shared/: Cargo.toml
slo/: policies.yaml
src/: lib.rs
tools/: bootstrap.nu  bootstrap.ps1  bootstrap.sh  shell-setup.nu
unified_agents/: UNIFICATION_REPORT.md  unify_agents.py
unified_tools/: merkle_anchor.py  performance_optimizer.py
(+285 files in other folders)
