[package]
name = "agentaskit-services"
version = "0.1.0"
edition = "2021"
description = "AgentAsKit Production Services - Health monitoring and capabilities"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
