[package]
name = "agentaskit-wiki-integration"
version = "0.1.0"
edition = "2021"
authors = ["AgentasKit Contributors"]
license = "MIT OR Apache-2.0"
description = "Integration for Litho (wiki-rs) AI-powered documentation generator"

[workspace]
# This is a standalone package, not part of the parent workspace

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "process"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
walkdir = "2.5"
glob = "0.3"

# Process management
which = "7.0"

# Markdown processing
markdown = "1.0"
regex = "1.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
