[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Integration tests for the Multi-Agent AgenticAI Task Deployment Kit"

[dependencies]
# Core dependencies
ark-os-core = { path = "../../core" }
tokio.workspace = true
tokio-test = "0.4"
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Testing dependencies
mockall.workspace = true
tempfile.workspace = true
assert_matches = "1.5"
serial_test = "2.0"

# HTTP client for API testing
reqwest.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "agent_performance"
harness = false

[[bench]]
name = "messaging_throughput"
harness = false